Updated and expanded bioblio.bib file.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -106,18 +106,19 @@ coefficients that are needed in a lens tolerancing analysis.},
 @Article{Albuquerque2012,
   author    = {Br\'{a}ulio Fonseca Carneiro de Albuquerque and Jose Sasian and Fabiano Luis de Sousa and Amauri Silva Montes},
   title     = {Method of glass selection for color correction in optical system design},
-  journal   = {Optics Express},
-  year      = {2012},
-  volume    = {20},
-  number    = {13},
-  month     = {Jun},
-  pages     = {13592--13611},
   doi       = {10.1364/OE.20.013592},
+  note      = {\href{https://doi.org/10.1364/OE.20.013592}{doi:10.1364/OE.20.013592}},
+  number    = {13},
+  pages     = {13592--13611},
   url       = {http://www.opticsexpress.org/abstract.cfm?URI=oe-20-13-13592},
+  volume    = {20},
   abstract  = {A method of glass selection for the design of optical systems with reduced chromatic aberration is presented. This method is based on the unification of two previously published methods adding new contributions and using a multi-objective approach. This new method makes it possible to select sets of compatible glasses suitable for the design of super-apochromatic optical systems. As an example, we present the selection of compatible glasses and the effective designs for all-refractive optical systems corrected in five spectral bands, with central wavelengths going from 485 nm to 1600 nm.},
   groups    = {OpticalDesign, ChromaticCorrection},
+  journal   = {Optics Express},
   keywords  = {Geometric optics ; Mathematical methods (general); Lens system design; Optical design and fabrication; Aberration compensation; Chromatic aberrations; Image quality; Lens design; Multispectral imaging; Optical design; Optical systems},
+  month     = {Jun},
   publisher = {OSA},
+  year      = {2012},
 }
 
 @Article{osti_1513839,
@@ -189,6 +190,75 @@ other authors.},
   keywords  = {Optical data storage; Aberrations (global); Lens system design; Chromatic aberrations; Lens design; Monochromatic aberrations; Optical design software; Ray tracing; Refractive index},
 }
 
+@Book{Kohlrausch1968,
+  author    = {Kohlrausch, F.},
+  date      = {1968},
+  title     = {Praktische Physik},
+  pages     = {408},
+  publisher = {B. G. Teubner},
+  volume    = {1},
+}
+
+@TechReport{SchottTIE32,
+  author      = {{Schott Advanced Optics}},
+  date        = {2018-09-01},
+  institution = {Schott Inc.},
+  title       = {TIE-32 Thermal loads on optical glass},
+  url         = {https://www.us.schott.com/d/advanced_optics/768b0d65-8838-4021-b7a9-5c06647d055c/1.5/schott_tie-32_thermal_loads_on_optical_glass_us.pdf},
+  groups      = {Optical Glass},
+}
+
+@Article{Herzberger1963,
+  author    = {Max Herzberger and Nancy R. McClure},
+  journal   = {Appl. Opt.},
+  title     = {The Design of Superachromatic Lenses},
+  year      = {1963},
+  month     = {Jun},
+  note      = {\href{https://doi.org/10.1364/AO.2.000553}{doi:10.1364/AO.2.000553}},
+  number    = {6},
+  pages     = {553--560},
+  volume    = {2},
+  abstract  = {The history of achromatic lenses is briefly reviewed. The latest development is the superachromat, which is corrected for four colors. Since the dispersion of glass can be represented by an equation containing four constants, the superachromat is practically corrected for all colors. The application of the superachromatic principle to thick lenses is described and it is shown that a compound lens can be made superachromatic by making each of its separate components superachromatic.},
+  doi       = {10.1364/AO.2.000553},
+  keywords  = {Chromatic aberrations; Lens arrays; Mirror design; Optical design; Optical systems; Visible light},
+  publisher = {OSA},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-2-6-553},
+}
+
+@Article{Tamagawa1994,
+  author    = {Yasuhisa Tamagawa and Satoshi Wakabayashi and Toru Tajime and Tsutomu Hashimoto},
+  title     = {Multilens system design with an athermal chart},
+  doi       = {10.1364/AO.33.008009},
+  note      = {\href{https://doi.org/10.1364/AO.33.008009}{doi:10.1364/AO.33.008009}},
+  number    = {34},
+  pages     = {8009--8013},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-33-34-8009},
+  volume    = {33},
+  abstract  = {We have introduced an athermal chart that plots chromatic dispersive power and thermal dispersive power on a Cartesian coordinate, and we give the design method of a multilens system in contact that satisfies achromatism and athermalization. The advantages of this chart are (1) that the condition of achromatism and athermalization is clear and (2) that the approximate power of the lenses that compose the multilens system is easily found on the chart. Design indices are given through a few design examples with an athermal chart.},
+  journal   = {Appl. Opt.},
+  keywords  = {Image quality; Optical aberrations; Optical design; Optical systems; Remote sensing; Systems design},
+  month     = {Dec},
+  publisher = {OSA},
+  year      = {1994},
+}
+
+@Article{W.Lessing1970,
+  author    = {N. v.d. W. Lessing},
+  title     = {Selection of Optical Glasses in Superachromats},
+  doi       = {10.1364/AO.9.001665},
+  note      = {\href{https://doi.org/10.1364/AO.9.001665}{doi:10.1364/AO.9.001665}},
+  number    = {7},
+  pages     = {1665--1668},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-9-7-1665},
+  volume    = {9},
+  abstract  = {A method for the choice of glasses for a superachromatic system consisting of four lenses in contact with each other is developed. The apparatus required for the application of the method, namely, a space representation of three optical constants of the glasses, is described, and the method is applied to the special case of the selection of glasses for a three-lens superachromat.},
+  journal   = {Appl. Opt.},
+  keywords  = {Color; Dispersion; Optical constants},
+  month     = {Jul},
+  publisher = {OSA},
+  year      = {1970},
+}
+
 @Article{Wang2019,
   author    = {Wei Wang and Xing Zhong and Jiang Liu and Xiaoheng Wang},
   title     = {Apochromatic lens design in the short-wave infrared band using the Buchdahl dispersion model},
@@ -206,24 +276,6 @@ other authors.},
   groups    = {OpticalDesign, ChromaticCorrection},
   keywords  = {Geometric optics; Image metrics; Lens design; Optical design software; Optical systems; Refractive index},
   publisher = {OSA},
-}
-
-@Book{Kohlrausch1968,
-  author    = {Kohlrausch, F.},
-  date      = {1968},
-  title     = {Praktische Physik},
-  pages     = {408},
-  publisher = {B. G. Teubner},
-  volume    = {1},
-}
-
-@TechReport{SchottTIE32,
-  author      = {{Schott Advanced Optics}},
-  date        = {2018-09-01},
-  institution = {Schott Inc.},
-  title       = {TIE-32 Thermal loads on optical glass},
-  url         = {https://www.us.schott.com/d/advanced_optics/768b0d65-8838-4021-b7a9-5c06647d055c/1.5/schott_tie-32_thermal_loads_on_optical_glass_us.pdf},
-  groups      = {Optical Glass},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
