Added Rayces paper to .bib.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -90,6 +90,7 @@ elements. In addition, after a temperature change the lens takes some time to st
 properties of the nominal lens system change. We review the concepts of the opto-thermal coefficient and of the thermal
 diffusivity, and provide a method for their rapid calculation in lens design software. We also provide tables of these
 coefficients that are needed in a lens tolerancing analysis.},
+  groups       = {Athermalisation},
   keywords     = {thermal tolerancing, uniform temperature change, opto-thermal coefficient, thermal diffusivity},
   year         = {2013},
 }
@@ -235,6 +236,7 @@ other authors.},
   url       = {http://ao.osa.org/abstract.cfm?URI=ao-33-34-8009},
   volume    = {33},
   abstract  = {We have introduced an athermal chart that plots chromatic dispersive power and thermal dispersive power on a Cartesian coordinate, and we give the design method of a multilens system in contact that satisfies achromatism and athermalization. The advantages of this chart are (1) that the condition of achromatism and athermalization is clear and (2) that the approximate power of the lenses that compose the multilens system is easily found on the chart. Design indices are given through a few design examples with an athermal chart.},
+  groups    = {Athermalisation},
   journal   = {Appl. Opt.},
   keywords  = {Image quality; Optical aberrations; Optical design; Optical systems; Remote sensing; Systems design},
   month     = {Dec},
@@ -278,6 +280,41 @@ other authors.},
   publisher = {OSA},
 }
 
+@InProceedings{Rayces2000,
+  author       = {Juan L. Rayces and Martha Rosete-Aguilar},
+  booktitle    = {Current Developments in Lens Design and Optical Systems Engineering},
+  title        = {{Selection of glasses for achromatic doublets with reduced secondary color}},
+  year         = {2000},
+  editor       = {Robert E. Fischer and Warren J. Smith and Robert E. Fischer and R. Barry Johnson and Warren J. Smith and William H. Swantner},
+  note         = {\href{https://doi.org/10.1117/12.405220}{doi:0.1117/12.405220}},
+  organization = {International Society for Optics and Photonics},
+  pages        = {36 -- 46},
+  publisher    = {SPIE},
+  volume       = {4093},
+  abstract     = {Graphical methods have been used in Engineering and Physics to speed up long numerical calculations often done by hand. Many of these methods have become obsolete with the increasing speed of digital computers. Charts for the selection of glasses for thin achromatic doublets with reduced secondary spectrum are among the graphs still in use probably because of the sizable number of possible combinations. With any of the most popular, present day, PC's all the possible combinations of all the glasses in the Schott Glass Catalog, taken a pair of glasses at a time secondary spectrum can be computed, sorted in increasing value and displayed on the monitor screen as a table in about 30 seconds. The number of acceptable solutions on the bases of magnitude of secondary spectrum only may still be huge. Further calculations of aberrations for specific cases will help reduce drastically the number of acceptable solutions. Beyond that, it will be left to the user to consider other parameters generally listed in glass catalogs data sheets to finally come out with one solution.},
+  doi          = {10.1117/12.405220},
+  url          = {https://doi.org/10.1117/12.405220},
+}
+
+@Article{Lim2016,
+  author    = {Tae-Yeon Lim and Sung-Chan Park},
+  title     = {Achromatic and athermal lens design by redistributing the element powers on an athermal glass map},
+  doi       = {10.1364/OE.24.018049},
+  note      = {\href{https://doi.org/10.1364/OE.24.018049}{doi:10.1364/OE.24.018049}},
+  number    = {16},
+  pages     = {18049--18058},
+  url       = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-16-18049},
+  volume    = {24},
+  abstract  = {We propose a new graphical method for selecting a pair of optical and housing materials to simultaneously achromatize and athermalize a multilens system. To obtain the material combination using an athermal glass map, the material suitable for housing is graphically selected, and then the powers of elements constituting an equivalent single lens are redistributed. Although a material combination does not exist, we can continuously change the power of each element. Thus, we can reasonably identify a pair of optical and housing materials that simultaneously satisfies achromatic and athermal conditions. By applying this method to design a Tessar lens, the chromatic and thermal defocuses are reduced to less than the depth of focus, over the specified waveband and temperature ranges.},
+  file      = {:C\:/Users/User/Documents/prj/DLR/LightweightScope/Literature/Achromatic and athermal lens design by redistributing the element powers on an athermal glass map.pdf:PDF},
+  groups    = {Athermalisation},
+  journal   = {Opt. Express},
+  keywords  = {Geometric optical design; Optical design of instruments; Lens system design; Image quality; Lens design; Modulation transfer function; Optical devices; Optical materials; Refractive index},
+  month     = {Aug},
+  publisher = {OSA},
+  year      = {2016},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -290,4 +327,5 @@ other authors.},
 1 StaticGroup:Aspheric Optics\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Freeform Optics\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Aspheric Lenses\;0\;0\;0x8a8a8aff\;\;\;;
+1 StaticGroup:Athermalisation\;0\;0\;0x8a8a8aff\;\;\;;
 }
