--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -100,6 +100,7 @@ coefficients that are needed in a lens tolerancing analysis.},
   date        = {2016-02-01},
   institution = {Schott Inc.},
   title       = {TIE-29 Refractive Index and Dispersion},
+  note        = {\href{https://www.schott.com/d/advanced_optics/02ffdb0d-00a6-408f-84a5-19de56652849/1.2/tie_29_refractive_index_and_dispersion_eng.pdf}{Link Accessed 2020-07-16}},
   url         = {https://www.schott.com/d/advanced_optics/02ffdb0d-00a6-408f-84a5-19de56652849/1.2/tie_29_refractive_index_and_dispersion_eng.pdf},
   groups      = {Optical Glass},
 }
@@ -313,6 +314,71 @@ other authors.},
   month     = {Aug},
   publisher = {OSA},
   year      = {2016},
+}
+
+@Article{kozhevatkin1993athermal,
+  author    = {Kozhevatkin, S. G. and Artamonova, M. V. and Molev, V. I.},
+  title     = {Athermal glasses with special dispersion behavior},
+  note      = {\href{https://doi.org/10.1007/BF00682543}{doi:10.1007/BF00682543}},
+  number    = {11-12},
+  pages     = {457--463},
+  url       = {https://doi.org/10.1007/BF00682543},
+  volume    = {50},
+  groups    = {Optical Glass},
+  journal   = {Glass and ceramics},
+  publisher = {Springer},
+  year      = {1993},
+}
+
+@PhdThesis{de2014multi,
+  author      = {de Albuquerque, B. F. C.},
+  date        = {2014},
+  institution = {Instituto Nacional de Pesquisas Espaciais-INPE},
+  title       = {A multi-objective memetic approach for the automatic design of optical systems},
+  url         = {http://mtc-m16d.sid.inpe.br/col/sid.inpe.br/mtc-m19/2014/01.15.12.56/doc/publicacao.pdf},
+  abstract    = {An innovative, evolvable hardware method for the automatic design of optical
+systems is presented and verified. The proposed method is based on a multiobjective
+memetic optimization algorithm. The multi-objective approach
+simultaneously, but separately, addresses the image quality, tolerance, and
+complexity of the system. The memetic technique breaks down the search for
+optical designs in three different parts or phases: optical glass selection,
+exploration, and exploitation. The optical glass selection phase is based on the
+unification of two previously published methods with new contributions to repair
+practical implementation issues and incorporates a multi-objective approach.
+This new glass selection method supports the choice of the most appropriate
+set of glasses for the system under design. The glass selection phase limits the
+available glasses from hundreds to just a few, drastically reducing the design
+space and significantly increasing the efficiency of the automatic design
+method. The exploration phase is based on an evolutionary algorithm (EA),
+more specifically, on a problem-tailored generalized extremal optimization
+(GEO) algorithm named optical GEO (O-GEO). The new EA incorporates many
+features customized for lens design such as optical system codification and
+diversity operands. The non-dominated systems found in the exploration phase
+are refined by a local search based on the damped least square method in the
+exploitation phase. As a result, the method returns a set of non-dominated
+solutions generating a Pareto front. Our method resulted in alternative and
+useful insights about the trade-off solutions for a lens design problem. The
+efficiency of the proposed method is verified through examples, showing
+excellent results for both simple systems and real-world problems.},
+  school      = {PhD thesis, Instituto Nacional de Pesquisas Espaciais-INPE},
+  year        = {2014},
+}
+
+@Book{Hartmann2014,
+  author    = {Hartmann, P.},
+  date      = {2014},
+  title     = {Optical Glass},
+  doi       = {10.1117/3.1002595},
+  isbn      = {9781628412932},
+  note      = {\href{https://doi.org/10.1117/3.1002595}{doi:10.1117/3.1002595}},
+  publisher = {SPIE},
+  series    = {SPIE Digital Library},
+  url       = {https://books.google.co.za/books?id=Vs\_woQEACAAJ},
+  abstract  = {For more than 400 years, optical glass has provided mankind with a window into both the hidden microcosm and vast outer cosmos of the known universe, transforming philosophy, science, and engineering through its visage and, thus, shaping modern civilization. Its high transmittance, homogeneity, and precisely defined light refraction properties are the preconditions for highly resolved true-color imaging, making it an intrinsic component of technology in general. From consumer products, such as cameras and binoculars, to microscopes and telescopes—the most essential tools of research in many fields—the role of optical glass is integral to the very foundations of modern science and industry.
+
+In contrast to its fundamental importance, there is often a lack of knowledge regarding the properties of optical glass by engineers and designers, causing misunderstandings in purchasing and fabrication, and ultimately limiting the potential and application of this dynamic material. This book will serve as an invaluable resource of technical information, including the index of refraction and its dependence on wavelength (dispersion), optical homogeneity and transmittance (presented together with restrictions imposed by the manufacturing processes and chemical resistance), as well as mechanical, thermal, and environmental properties. Measurement methods with their achievable accuracy are given, along with a wide scope of overview diagrams illustrating properties and main uses, as well as diagrams ranking optical glass types with respect to their properties. The wide scope and lucid organization of this volume will prove to be highly valuable across a wide range of design, engineering, and purchasing applications within the many fields dependent on this incredible material.},
+  lccn      = {2014942744},
+  year      = {2014},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
