Additions and updates to biblio.bib.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -99,7 +99,7 @@ coefficients that are needed in a lens tolerancing analysis.},
   author      = {{Schott Advanced Optics}},
   date        = {2016-02-01},
   institution = {Schott Inc.},
-  title       = {TIE-29 Refractive Index and Dispersion},
+  title       = {{TIE-29 Refractive Index and Dispersion}},
   note        = {\href{https://www.schott.com/d/advanced_optics/02ffdb0d-00a6-408f-84a5-19de56652849/1.2/tie_29_refractive_index_and_dispersion_eng.pdf}{Link Accessed 2020-07-16}},
   url         = {https://www.schott.com/d/advanced_optics/02ffdb0d-00a6-408f-84a5-19de56652849/1.2/tie_29_refractive_index_and_dispersion_eng.pdf},
   groups      = {Optical Glass},
@@ -330,7 +330,7 @@ other authors.},
   year      = {1993},
 }
 
-@PhdThesis{de2014multi,
+@PhdThesis{Albuquerque2014,
   author      = {de Albuquerque, B. F. C.},
   date        = {2014},
   institution = {Instituto Nacional de Pesquisas Espaciais-INPE},
@@ -360,7 +360,7 @@ solutions generating a Pareto front. Our method resulted in alternative and
 useful insights about the trade-off solutions for a lens design problem. The
 efficiency of the proposed method is verified through examples, showing
 excellent results for both simple systems and real-world problems.},
-  school      = {PhD thesis, Instituto Nacional de Pesquisas Espaciais-INPE},
+  school      = {Instituto Nacional de Pesquisas Espaciais-INPE},
   year        = {2014},
 }
 
@@ -379,6 +379,45 @@ excellent results for both simple systems and real-world problems.},
 In contrast to its fundamental importance, there is often a lack of knowledge regarding the properties of optical glass by engineers and designers, causing misunderstandings in purchasing and fabrication, and ultimately limiting the potential and application of this dynamic material. This book will serve as an invaluable resource of technical information, including the index of refraction and its dependence on wavelength (dispersion), optical homogeneity and transmittance (presented together with restrictions imposed by the manufacturing processes and chemical resistance), as well as mechanical, thermal, and environmental properties. Measurement methods with their achievable accuracy are given, along with a wide scope of overview diagrams illustrating properties and main uses, as well as diagrams ranking optical glass types with respect to their properties. The wide scope and lucid organization of this volume will prove to be highly valuable across a wide range of design, engineering, and purchasing applications within the many fields dependent on this incredible material.},
   lccn      = {2014942744},
   year      = {2014},
+}
+
+@Article{Albuquerque2016,
+  author       = {Br\'{a}ulio Fonseca Carneiro de Albuquerque and Fabiano Luis de Sousa and Amauri Silva Montes},
+  journal      = {Opt. Express},
+  title        = {Multi-objective approach for the automatic design of optical systems},
+  year         = {2016},
+  month        = {Mar},
+  note         = {\href{https://doi.org/10.1364/OE.24.006619}{doi:10.1364/OE.24.006619}},
+  number       = {6},
+  pages        = {6619--6643},
+  volume       = {24},
+  abstract     = {An innovative method for the automatic design of optical systems is presented and verified. The proposed method is based on a multi-objective evolutionary memetic optimization algorithm. The multi-objective approach simultaneously, but separately, addresses the image quality, tolerance, and complexity of the system. The memetic technique breaks down the search for optical designs in to three different parts or phases: optical glass selection, exploration, and exploitation. The optical glass selection phase defines the most appropriate set of glasses for the system under design. The glass selection phase limits the available glasses from hundreds to just a few, drastically reducing the design space and significantly increasing the efficiency of the automatic design method. The exploration phase is based on an evolutionary algorithm (EA), more specifically, on a problem-tailored generalized extremal optimization (GEO) algorithm, named Optical GEO (O-GEO). The new EA incorporates many features customized for lens design, such as optical system codification and diversity operators. The trade-off systems found in the exploration phase are refined by a local search, based on the damped least square method in the exploitation phase. As a result, the method returns a set of trade-off solutions, generating a Pareto front. Our method delivers alternative and useful insights for the compromise solutions in a lens design problem. The efficiency of the proposed method is verified through real-world examples, showing excellent results for the tested problems.},
+  date         = {2016},
+  doi          = {10.1364/OE.24.006619},
+  groups       = {Optical Design},
+  journaltitle = {Optics Express},
+  keywords     = {Geometric optics ; Mathematical methods (general); Lens system design; Optical design and fabrication; Aberration compensation; Automatic lens design; Genetic algorithms; Image quality; Lens design; Optical design; Optical design software},
+  publisher    = {OSA},
+  url          = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-6-6619},
+}
+
+@Article{Guo2019,
+  author       = {Dabo Guo and Liang Yin and Guang Yuan},
+  journal      = {Opt. Express},
+  title        = {New automatic optical design method based on combination of particle swarm optimization and least squares},
+  year         = {2019},
+  month        = {Jun},
+  note         = {\href{https://doi.org/10.1364/OE.27.017027}{doi:10.1364/OE.27.017027}},
+  number       = {12},
+  pages        = {17027--17040},
+  volume       = {27},
+  abstract     = {Damped least square method is one of the popular methods for automatic lens design. Various improvements in this automatic optical design are mainly due to the optimization of the damping factor and the weight factor. Especially in the four stages of lens design, designers pay more attention to the \&\#x201C;correction\&\#x201D; stage, and recognized the importance of human experience in \&\#x201C;correction\&\#x201D;. The introduction of computer brought the feeling of indescribable about the balance aberration of computer. In fact, the function of computer has not gone beyond the range of balance aberration. In this paper, we discussed how to make the whole process of lens design completely automatic by computer, including the selection, correction and evaluation of the system. To achieve this process, the key step is how to make the computer think like a designer and select the type of lens. The success of lens design depends largely on the type selection. Designers who have a profound understanding of optical design theory and rich practical experience can select the simplest and most suitable one from a wide range of types, therefore, this method can also express a new global search method for optical design. Least squares is added to Particle Swarm Optimization (PSO) algorithm to optimize glass selection in optical system. After comparing and analysing the optimized design solutions, the system performance is well achieved. This method can be conveniently implemented and expands the solution space of the optical system.},
+  date         = {2019},
+  doi          = {10.1364/OE.27.017027},
+  journaltitle = {Optics Express},
+  keywords     = {Automatic lens design; Genetic algorithms; Lens design; Optical design; Optical systems; Ray tracing},
+  publisher    = {OSA},
+  url          = {http://www.opticsexpress.org/abstract.cfm?URI=oe-27-12-17027},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
