Handbook of Optics Vol3 to biblio.bib.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -307,7 +307,6 @@ other authors.},
   url       = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-16-18049},
   volume    = {24},
   abstract  = {We propose a new graphical method for selecting a pair of optical and housing materials to simultaneously achromatize and athermalize a multilens system. To obtain the material combination using an athermal glass map, the material suitable for housing is graphically selected, and then the powers of elements constituting an equivalent single lens are redistributed. Although a material combination does not exist, we can continuously change the power of each element. Thus, we can reasonably identify a pair of optical and housing materials that simultaneously satisfies achromatic and athermal conditions. By applying this method to design a Tessar lens, the chromatic and thermal defocuses are reduced to less than the depth of focus, over the specified waveband and temperature ranges.},
-  file      = {:C\:/Users/User/Documents/prj/DLR/LightweightScope/Literature/Achromatic and athermal lens design by redistributing the element powers on an athermal glass map.pdf:PDF},
   groups    = {Athermalisation},
   journal   = {Opt. Express},
   keywords  = {Geometric optical design; Optical design of instruments; Lens system design; Image quality; Lens design; Modulation transfer function; Optical devices; Optical materials; Refractive index},
@@ -418,6 +417,20 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   keywords     = {Automatic lens design; Genetic algorithms; Lens design; Optical design; Optical systems; Ray tracing},
   publisher    = {OSA},
   url          = {http://www.opticsexpress.org/abstract.cfm?URI=oe-27-12-17027},
+}
+
+@Book{Gross2007,
+  author    = {Gross, H. and Z{\"u}gge, H. and Peschka, M. and Blechinger, F.},
+  date      = {2007},
+  title     = {Handbook of Optical Systems, Aberration Theory and Correction of Optical Systems},
+  doi       = {10.1002/9783527699254},
+  isbn      = {9783527403790},
+  note      = {\href{https://doi.org/10.1002/9783527699254}{doi:10.1002/9783527699254}},
+  publisher = {Wiley},
+  series    = {Handbook of Optical Systems},
+  url       = {https://books.google.co.za/books?id=G8AWAQAAMAAJ},
+  lccn      = {94032692},
+  year      = {2007},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
