Bib additions/updates.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -123,18 +123,18 @@ coefficients that are needed in a lens tolerancing analysis.},
   year      = {2012},
 }
 
-@Article{osti_1513839,
+@Article{Kaufman2017,
   author       = {Kaufman, Morris and Frayer, Daniel and Corredor, Andrew and Light, Brandon},
   title        = {Design Guidelines for Predicting Stress in Cemented Doublets Undergoing Temperature Change},
-  journal      = {Optical Design and Fabrication 2017 (Freeform, IODC, OFT)},
-  year         = {2017},
-  month        = {7},
-  note         = {\href{https://doi.org/10.1364/IODC.2017.ITh3A.6}{doi:10.1364/IODC.2017.ITh3A.6}},
   doi          = {10.1364/IODC.2017.ITh3A.6},
+  note         = {\href{https://doi.org/10.1364/IODC.2017.ITh3A.6}{doi:10.1364/IODC.2017.ITh3A.6}},
   url          = {https://www.osti.gov/biblio/1513839},
   abstractnote = {This work explores quick predictive methods for calculating potentially risky stresses in cemented doublets underdoing temperature change that agree well with finite element analysis. We also provide guidelines for avoiding stress concentrations. Cemented doublets are ubiquitous in the optics world, but it is not always clear if they will perform as intended in a specific thermal environment due to excessive stress. The stress in the optic can cause debonding or even fracture. Yoder addressed this problem using analytical results from Chen and Nelson but also expressed some skepticism as to the accuracy and usefulness of those results. Closed-form analytical solutions are extremely useful when doing trade-off studies to see if a particular geometry or glass choice will cause stress problems. The problem of bonded materials undergoing temperature change is of great interest in the electronics industry, and improved analytical solutions are now available that address the issues raised by Yoder, and they have been validated using finite element analysis (FEA). But the newer solutions still have limitations. The analytical solutions presented here cannot predict stresses due to stress concentrations or singularities at the edge of the bondline—this still has to be done using FEA—although some advanced methods are available. Also, the existing analytical methods assume a flat interface between adjoining elements; they do not account for the effect of curvature. We find that most doublet failures start at the edges and involve debonding of the glass. Glass fracture is rare for doublets, accounting for less than 10% of the failures. This paper provides the reader with a general introduction to a large and dense body of literature in order to demystify the subject of temperature-induced glass bonding failures.},
   groups       = {OptomechanicalDesign},
+  journal      = {Optical Design and Fabrication 2017 (Freeform, IODC, OFT)},
+  month        = {7},
   place        = {United States},
+  year         = {2017},
 }
 
 @Article{Reshidko2014,
@@ -431,6 +431,19 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   url       = {https://books.google.co.za/books?id=G8AWAQAAMAAJ},
   lccn      = {94032692},
   year      = {2007},
+}
+
+@Book{Dilworth2018,
+  author    = {Dilworth, Donald},
+  title     = {Lens Design},
+  doi       = {10.1088/978-0-7503-1611-8},
+  isbn      = {978-0-7503-1611-8},
+  note      = {\href{http://dx.doi.org/10.1088/978-0-7503-1611-8}{doi:10.1088/978-0-7503-1611-8}},
+  publisher = {IOP Publishing},
+  series    = {2053-2563},
+  url       = {http://dx.doi.org/10.1088/978-0-7503-1611-8},
+  abstract  = {Lens Design: Automatic and Quasi-Autonomous Computational Methods and Techniques is the first book that interactively describes the newest modern lens design tools.  Detailing design methods for a variety of lens forms, this book shows that fixed focus and zoom lenses can be optimized, starting from plane-parallel surfaces, in a brief time on a modern fast PC compared to traditional tools that require many days or weeks of tedious work. Loaded with tips and ideas resulting from over 50 years of experience, the reader will improve their lens design skill.  Experienced and aspiring lens designers who master the power of the tools, methods, and principles taught in this book will be able to develop excellent designs now and in the future. Part of Series in Emerging Technologies in Optics and Photonics},
+  year      = {2018},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
