biblio updates and additions.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -179,17 +179,18 @@ other authors.},
 
 @InProceedings{Sparrold:14,
   author    = {Scott W. Sparrold and R. Hamilton Shepard},
-  title     = {An Efficient Method of Reducing Glass Dispersion Tolerance Sensitivity},
   booktitle = {Classical Optics 2014},
-  year      = {2014},
-  publisher = {Optical Society of America},
-  pages     = {ITu2A.6},
+  title     = {An Efficient Method of Reducing Glass Dispersion Tolerance Sensitivity},
   doi       = {10.1364/IODC.2014.ITu2A.6},
+  note      = {\href{https://doi.org/10.1364/IODC.2014.ITu2A.6}{doi:10.1364/IODC.2014.ITu2A.6}},
+  pages     = {ITu2A.6},
+  publisher = {Optical Society of America},
   url       = {http://www.osapublishing.org/abstract.cfm?URI=IODC-2014-ITu2A.6},
   abstract  = {A simple and computationally efficient optimization constraint based on Seidel aberrations is proposed to relax dispersion tolerance sensitivity and provide insight on when lens splitting or melt fitting becomes necessary to achieve high manufacturing yield.},
   groups    = {OpticalDesign},
   journal   = {Classical Optics 2014},
   keywords  = {Optical data storage; Aberrations (global); Lens system design; Chromatic aberrations; Lens design; Monochromatic aberrations; Optical design software; Ray tracing; Refractive index},
+  year      = {2014},
 }
 
 @Book{Kohlrausch1968,
@@ -444,6 +445,38 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   url       = {http://dx.doi.org/10.1088/978-0-7503-1611-8},
   abstract  = {Lens Design: Automatic and Quasi-Autonomous Computational Methods and Techniques is the first book that interactively describes the newest modern lens design tools.  Detailing design methods for a variety of lens forms, this book shows that fixed focus and zoom lenses can be optimized, starting from plane-parallel surfaces, in a brief time on a modern fast PC compared to traditional tools that require many days or weeks of tedious work. Loaded with tips and ideas resulting from over 50 years of experience, the reader will improve their lens design skill.  Experienced and aspiring lens designers who master the power of the tools, methods, and principles taught in this book will be able to develop excellent designs now and in the future. Part of Series in Emerging Technologies in Optics and Photonics},
   year      = {2018},
+}
+
+@InProceedings{Jamieson1992,
+  author       = {Thomas H. Jamieson},
+  booktitle    = {Optomechanical Design: A Critical Review},
+  title        = {{Athermalization of optical instruments from the optomechanical viewpoint}},
+  year         = {1992},
+  editor       = {Paul R. Yoder Jr.},
+  note         = {\href{https://doi.org/10.1117/12.61105}{doi:10.1117/12.61105}},
+  organization = {International Society for Optics and Photonics},
+  pages        = {131 -- 159},
+  publisher    = {SPIE},
+  volume       = {10265},
+  abstract     = {The refractive properties and physical dimensions of optical components change with temperature, and hence also do the characteristics of optical systems. Athermalization is the principle of stabilizing the optical performance with respect to temperature, either by designing the optical elements and mounts to be mutually compensating, or by including movable corrective mechanisms. For refractive materials, two coefficients can be defined which characterize the thermooptical sensitivity, one applicable to uniform temperature changes, and the other to spatial temperature gradients. For normal optical glasses, the effects are small, but for plastics, infrared materials, and liquids, the thermal effects can be so great as to limit their usefulness. Passive athermalization is analogous to achromatism and optical systems can be designed simultaneously achromatic and athermal. The use of composite, and high expansion mounts employing plastics or fluids, gives greater control of thermo-optical effects. Active athermalization uses auxiliary power to drive compensating elements to maintain optical performance. Commercial optical design programs can be used to model and analyze thermally perturbed systems accurately.},
+  doi          = {10.1117/12.61105},
+  url          = {https://doi.org/10.1117/12.61105},
+}
+
+@Article{Jamieson1981,
+  author    = {Thomas H. Jamieson},
+  journal   = {Optical Engineering},
+  title     = {{Thermal Effects In Optical Systems}},
+  year      = {1981},
+  note      = {\href{https://doi.org/10.1117/12.7972683}{doi:10.1117/12.7972683}},
+  number    = {2},
+  pages     = {156 -- 160},
+  volume    = {20},
+  abstract  = {Optical systems often have to operate over a wide temperature range. The effects of temperature changes on the performance of some typical optical systems are described in this paper. Methods used to counteract such variations in optical properties range from servo-controlled motion of the components and bimetal mounts with reciprocating motions to, as this paper describes, a simple choice of appropriate optical and mount materials. The optical systems considered range from single lenses to high quality multielement imaging systems.},
+  doi       = {10.1117/12.7972683},
+  keywords  = {Thermal effects, Temperature metrology, Imaging systems, Lenses, Optical properties},
+  publisher = {SPIE},
+  url       = {https://doi.org/10.1117/12.7972683},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
